Fix capitalization and spelling in Animation Rigging documentation

--- a/content/docs/avatar/animation-rigging.mdx
+++ b/content/docs/avatar/animation-rigging.mdx
@@ -11,27 +11,27 @@ Documentation can be found for all the Constraints that Animation Rigging provid
 <Steps>
 
 <Step>
-**Adding Rig Builder**: Add a `Rig Builder` component and `Animator` component on the `Armature` Gameobject. 
+**Adding Rig Builder**: Add a `Rig Builder` component and `Animator` component on the `Armature` GameObject. 
 
-![Inspector Window at Armature Gameobject](/img/avatars/17.png)
+![Inspector Window at Armature GameObject](/img/avatars/17.png)
 
 <Callout type="info">
-*Basis uses the Root/Avatar's gameobject animator for animation and rigging*. 
+*Basis uses the Root/Avatar's GameObject animator for animation and rigging*. 
 </Callout>
 
 <Callout type="warning">
-**You can not use the root's animator for the Rig Builder and will break animation and Basis armature loader.**
+**You can not use the Avatar's animator for the Rig Builder. Doing so will break animations and Basis armature initialization.**
 </Callout>
 </Step>
 <Step>
-**Creating Rig Setup**: Create an empty Gameobject named "Rig Setup" and add the `Rig` component to it.
+**Creating Rig Setup**: Create an empty GameObject named "Rig Setup" and add the `Rig` component to it.
 
-![Inspector Window for Rig Setup Gameobject](/img/avatars/18.png)
+![Inspector Window for Rig Setup GameObject](/img/avatars/18.png)
 
 </Step>
 
 <Step>
-**Assigning Rig Setup**: Assign the "Rig Setup" Gameobject to the `Rig Builder` component of the `Armature`.
+**Assigning Rig Setup**: Assign the "Rig Setup" GameObject to the `Rig Builder` component of the `Armature`.
 
 ![Inspector Window for Armature after assignment](/img/avatars/19.png)
 
@@ -64,7 +64,7 @@ Do the [Setup](#setup-for-animation-rigging-packages) first than continue with i
 
 <Step>
 
-Add the `Multi-Rotation Constraint` Component onto an gameobject that is a child of the `Rig Setup` Gameobject.
+Add the `Multi-Rotation Constraint` Component onto an GameObject that is a child of the `Rig Setup` GameObject.
 
 ![Twist Component in Inspector Window](/img/avatars/21.png)
 
@@ -74,8 +74,8 @@ Add the `Multi-Rotation Constraint` Component onto an gameobject that is a child
 
 Assign the bone you want affected in the Constrained Object field. One or more source objects can be used.
 <Callout type="info">
-You can drag and drop the source bones/GameObjects onto the Source Bojects in the area highlighted in Red.
-You can only add one `Multi-Roation Constraint` per gameObject.
+You can drag and drop the source bones/GameObjects onto the Source Objects in the area highlighted in Red.
+You can only add one `Multi-Rotation Constraint` per gameObject.
 </Callout>
 ![Twist Component in Inspector Window](/img/avatars/22.png)
 </Step>
